--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -107,3 +107,15 @@ p {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.container-10 {
+    position: fixed;
+    z-index: 100;
+    top: 0px;
+    height: 48px;
+    background: #EC1F27;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
