--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,29 @@
 {% assign owner = site.data.nav.footer[0] %}
 
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
-  <div class="container-10">
-    
-  </div>
+  <!--<div class="container-10">
+    <p class="join">Join DSA today!</p>
+    <a class="btn-primary" href="https://act.dsausa.org/donate/membership/">Join!</a>
+  </div> -->
+  <div jsname="NKtjmd" class="vB4mjb phf0q QOTFId" role="region" aria-labelledby="i1" tabbable="" tabindex="0" style="background-color: rgb(213, 44, 31);">
+    <p id="i1" class="Y4CpGd jCzMm" style="color: rgb(255, 255, 255);">
+    We have a world to win.
+    </p>
+    <div class="vKRmoe">
+    ARIARedundant title text
+    <div role="presentation" class="uArJ5e UQuaGc AeAAkf WWpVfd Y4CpGd" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue;focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;" jsshadow="" title="Join DSA!" style="color: rgb(255, 255, 255); border-color: rgb(255, 255, 255);">
+    <a class="IrxBzb TpQm9d" href="https://www.google.com/url?q=https%3A%2F%2Fact.dsausa.org%2Fdonate%2Fmembership%2F&amp;sa=D&amp;sntz=1&amp;usg=AOvVaw2mzf9gWNexPjsNRHO50OTK" target="_blank">
+    <div class="Fvio9d MbhUzd" jsname="ksKsZd"></div>
+    <div class="e19J0b CeoRYc"></div>
+    <span jsslot="" class="l4V7wb Fxmcue">
+    <span class="NPEfkd RveJvd snByac">
+    Join DSA!
+    </span>
+    </span>
+    </a>
+    </div>
+    </div>
+    </div>
   <nav class="container">
     <!-- site home -->
     <a class="navbar-brand" href="{{ '/' | absolute_url }}">
