--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -112,11 +112,29 @@ p {
     position: fixed;
     z-index: 100;
     top: 0px;
-    height: 48px;
+    height: 68px;
     background: #EC1F27;
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    max-width: 1600px;
 }
 
+.join-btn {
+    padding-left: 23px;
+    display: flex;
+}
+
+.container-20 {
+    position: fixed;
+    z-index: 100;
+    top: 68px;
+    height: 56px;
+    background: #EC1F27;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    max-width: 1600px;
+}
