--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container-10">
     <p class="join">Join DSA today!</p>
-    <a class="join-btn"
+    <a class="join-btn">Join</a>
   </div>
   <nav class="container-20">
     <!-- site home -->
