--- a/_sass/bootstrap/scss/_navbar.scss
+++ b/_sass/bootstrap/scss/_navbar.scss
@@ -21,7 +21,6 @@
   flex-wrap: wrap; // allow us to do the line break for collapsing content
   align-items: center;
   justify-content: space-between; // space out brand from logo
-  padding: $navbar-padding-y $navbar-padding-x;
   width: 100%;
   height: 150px;
   z-index: 10;
@@ -42,10 +41,13 @@
     top: 0px;
     height: 68px;
     display: flex;
+    padding: $navbar-padding-y $navbar-padding-x;
     justify-content: center;
     width: 100%;
+    background-color: #231F20;
+    color: #ffffff;
+    
   }
-
 }
 
 
