--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container-10">
     Join DSA today!
-    <a class="join-btn">Join</a>
+    <a class="btn-join">Join</a>
   </div>
   <nav class="container">
     <!-- site home -->
     <a class="navbar-brand" href="{{ '/' | absolute_url }}">
       <img class="my-auto mr-2" src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="32">
-      <b>{{ owner.owner }}</b>
+      <b>{{ owner.name }}</b>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
