--- a/_sass/bootstrap/scss/_navbar.scss
+++ b/_sass/bootstrap/scss/_navbar.scss
@@ -17,12 +17,10 @@
 
 .navbar {
   position: fixed;
-  display: flex;
-  flex-wrap: wrap; // allow us to do the line break for collapsing content
   align-items: center;
   justify-content: space-between; // space out brand from logo
   width: 100%;
-  height: 150px;
+  height: 126px;
   z-index: 10;
 
   // Because flex properties aren't inherited, we need to redeclare these first
@@ -43,8 +41,9 @@
     display: flex;
     padding: $navbar-padding-y $navbar-padding-x;
     justify-content: center;
+    align-items: center;
     width: 100%;
-    background-color: #231F20;
+    background-color: #0D6AA0;
     color: #ffffff;
     
   }
@@ -118,6 +117,7 @@
   // For always expanded or extra full navbars, ensure content aligns itself
   // properly vertically. Can be easily overridden with flex utilities.
   align-items: center;
+  background-color: #EC1F27;
 }
 
 // Button for toggling the navbar when in its collapsed state
