Final header design

--- a/_sass/dsa/buttons.scss
+++ b/_sass/dsa/buttons.scss
@@ -23,6 +23,15 @@
 }
 
 .btn-join {
-    padding-left: 23px;
+    background: var(--red);
+    color: white;
+    font-size: var(--size-xs);
+
+    &:hover{ 
+        background: var(--red-tint-1);
+    }
+
+    margin-left: 23px;
     display: flex;
+    font-weight: bold;
 }
