--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 {% assign owner = site.data.owner %}
+{% assign join = link in site.data.nav.join %}
 
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container-10">
     Join DSA today!
-    <a class="btn-join">Join</a>
+    <a class="btn-join" href= "{{join}}">Join</a>
   </div>
   <nav class="container">
     <!-- site home -->
