--- a/_sass/bootstrap/scss/_navbar.scss
+++ b/_sass/bootstrap/scss/_navbar.scss
@@ -20,14 +20,13 @@
   align-items: center;
   justify-content: space-between; // space out brand from logo
   width: 100%;
-  height: 126px;
+  height: 99px;
   z-index: 10;
 
   // Because flex properties aren't inherited, we need to redeclare these first
   // few properties so that content nested within behave properly.
   > .container,
   > .container-fluid {
-    top: 68px;
     height: 56px;
     display: flex;
     flex-wrap: wrap;
@@ -36,8 +35,6 @@
   }
 
   .container-10 {
-    top: 0px;
-    height: 68px;
     display: flex;
     padding: $navbar-padding-y $navbar-padding-x;
     justify-content: center;
@@ -45,7 +42,7 @@
     width: 100%;
     background-color: #0D6AA0;
     color: #ffffff;
-    
+    font-weight: bold;
   }
 }
 
@@ -158,7 +155,6 @@
         > .container,
         > .container-fluid {
           padding-right: 0;
-          padding-left: 0;
         }
       }
 
