Header Button fix

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
 {% assign owner = site.data.owner %}
-{% assign join = link in site.data.nav.join %}
 
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container-10">
     Join DSA today!
-    <a class="btn-join" href= "{{join}}">Join</a>
+    <a class="btn btn-join" href= "https://act.dsausa.org/donate/membership/">Join</a>
   </div>
   <nav class="container">
     <!-- site home -->
