--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container-10">
     Join DSA today!
-    <a class="btn btn-join" href= "https://act.dsausa.org/donate/membership/">Join</a>
+    <a class="btn btn-join" href="https://act.dsausa.org/donate/membership/" target="_blank">Join</a>
   </div>
   <nav class="container">
     <!-- site home -->
@@ -24,6 +24,14 @@
           {%- else -%}
             {%- assign url = link.url | relative_url -%}
           {%- endif -%}
+          {% if item.dropdown %}
+          <li class="dropdown">
+            <a href="#" class="dropbtn">{{ item.title }}</a>
+            <ul class="dropdown-content">
+              {% for sublink in item.sublinks %}
+                <li><a href="{{ sublink.url }}">{{ sublink.title }}</a></li>
+              {% endfor %}
+              {%- endif -%}
         <li class="nav-item">
           <a class="nav-link" href="{{ url }}" {% if link.description %} title="{{ link.description }}"
             {% endif %}>{{ link.title }}</a>
