--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
     </div>
     <div class="page-footer-copyright">
         <div class="container text-center">
-            <img src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="32"> Copy
+            <img src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="32">
         </div>
     </div>
 </footer>
