--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,27 +18,32 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav ml-auto">
 
-        <!-- TODO add theme version dropdown here -->
         {%- for link in site.data.nav.header -%}
           {%- if link.url contains '://' -%}
             {%- assign url = link.url -%}
           {%- else -%}
             {%- assign url = link.url | relative_url -%}
+
           {%- endif -%}
-          {% if item.dropdown %}
-          <li class="dropdown">
-            <a href="#" class="dropbtn">{{ item.title }}</a>
-            <ul class="dropdown-content">
-              {% for sublink in item.sublinks %}
-                <li><a href="{{ sublink.url }}">{{ sublink.title }}</a></li>
-              {% endfor %}
-              {%- endif -%}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url }}" {% if link.description %} title="{{ link.description }}"
-            {% endif %}>{{ link.title }}</a>
-        </li>
+          <li class="nav-item {% if link.sub_menu %} dropdown {% endif %}">
+            <a class="nav-link {% if link.sub_menu %} dropdown-toggle {% endif %}" 
+               href="{{ url }}" 
+               {% if link.description %} title="{{ link.description }}" {% endif %}
+               {% if link.sub_menu %} data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" {% endif %}>
+               {{ link.title }}
+            </a>
+
+            {% if link.sub_menu %}
+              <div class="dropdown-menu">
+                {% for sub_link in link.sub_menu %}
+                  <a class="dropdown-item" href="{{ sub_link.url | relative_url }}">{{ sub_link.title }}</a>
+                {% endfor %}
+              </div>
+            {% endif %}
+          </li>
         {%- endfor -%}
       </ul>
+      
       {% if site.search == true %}
         {%- include search-providers/search_form.html -%}
       {% endif %}
