--- a/_sass/bootstrap/scss/_dropdown.scss
+++ b/_sass/bootstrap/scss/_dropdown.scss
@@ -24,7 +24,7 @@
   min-width: $dropdown-min-width;
   padding: $dropdown-padding-y 0;
   margin: $dropdown-spacer 0 0; // override default ul
-  @include font-size($dropdown-font-size);
+  @include font-size($navbar-brand-font-size);
   color: $dropdown-color;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   list-style: none;
