--- a/_sass/bootstrap/scss/_variables.scss
+++ b/_sass/bootstrap/scss/_variables.scss
@@ -753,7 +753,7 @@ $dropdown-min-width:                10rem !default;
 $dropdown-padding-y:                .5rem !default;
 $dropdown-spacer:                   .125rem !default;
 $dropdown-font-size:                $font-size-lg !default;
-$dropdown-color:                    $body-color !default;
+$dropdown-color:                    $white !default;
 $dropdown-bg:                       $dsa !default;
 $dropdown-border-color:             rgba($black, .15) !default;
 $dropdown-border-radius:            $border-radius !default;
