--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,13 +23,11 @@
             {%- assign url = link.url -%}
           {%- else -%}
             {%- assign url = link.url | relative_url -%}
-
           {%- endif -%}
+
           <li class="nav-item {% if link.sub_menu %} dropdown {% endif %}">
-            <a class="nav-link {% if link.sub_menu %} dropdown-toggle {% endif %}" 
-               href="{{ url }}" 
-               {% if link.description %} title="{{ link.description }}" {% endif %}
-               {% if link.sub_menu %} data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" {% endif %}>
+            <a class="nav-link" href="{{ url }}" 
+               {% if link.description %} title="{{ link.description }}" {% endif %}>
                {{ link.title }}
             </a>
 
