--- a/_sass/bootstrap/scss/_dropdown.scss
+++ b/_sass/bootstrap/scss/_dropdown.scss
@@ -30,9 +30,11 @@
   list-style: none;
   background-color: $dropdown-bg;
   background-clip: padding-box;
-  border: $dropdown-border-width solid $dropdown-border-color;
+  border: 0px solid $dropdown-border-color; // $dropdown-border-width from the 0px
   @include border-radius($dropdown-border-radius);
   @include box-shadow($dropdown-box-shadow);
+  font-family: "ManifoldDSA", sans-serif;
+  font-weight: bold;
 }
 
 @each $breakpoint in map-keys($grid-breakpoints) {
@@ -125,8 +127,8 @@
   width: 100%; // For `<button>`s
   padding: $dropdown-item-padding-y $dropdown-item-padding-x;
   clear: both;
-  font-weight: $font-weight-normal;
-  color: $dropdown-link-color;
+  font-weight: bold;
+  color: $navbar-dark-color;
   text-align: inherit; // For `<button>`s
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   background-color: transparent; // For `<button>`s
@@ -145,9 +147,8 @@
   }
 
   @include hover-focus {
-    color: $dropdown-link-hover-color;
+    color: $navbar-dark-hover-color;
     text-decoration: none;
-    @include gradient-bg($dropdown-link-hover-bg);
   }
 
   &.active,
