More nav fixes and icon additions.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
 
     <div class="page-footer-copyright">
         <div class="container text-center">
-            <img src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="32"> <div class="navbar navbar-dark">&copy; 2024, Northwest Arkansas DSA </div>
+            <img src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="32"> <a class="nav-link" style="color: #fff; font-weight: bold">&copy; 2024, Northwest Arkansas DSA </a>
         </div>
     </div>
 </footer>
