--- a/_includes/head/styles.html
+++ b/_includes/head/styles.html
@@ -1,3 +1,4 @@
 <!-- styles start -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- styles end -->
