--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,13 @@
 {% assign owner = site.data.nav.footer[0] %}
 {% assign social = site.data.nav.footer[1] %}
-{% assign feed = site.data.nav.footer[2] %}
+{% assign ardsa = site.data.nav.footer[2] %}
 {% assign about = site.data.copy.global[0] %}
 
 <footer class="page-footer">
     <div class="page-footer-owner">
         <div class="container">
             <div class="row my-3">
-                <div class="col-md-12">
-                    <h2>{{ owner.owner }} <span class="float-right">🌹</span></h1>
-                </div>
-            </div>
-            <div class="row my-3">
-                <div class="col-md-8 col-sm-12">
+                <div class="col-md-6 col-sm-12">
                     <p class="my-3">{{ about.about }}</p>
                 </div>
                 <div class="col-md-2 col-sm-12">
@@ -31,14 +26,21 @@
                     </ul>
                 </div>
                 <div class="col-md-2 col-sm-12">
-                    <h4 class="text-red m-0">Sitemap</h3>
+                    <h4 class="text-red m-0">Arkansas DSA</h3>
                     <ul class="my-3">
-                        {% for fd_link in feed.feed %}
+                        {% for fd_link in ardsa.ardsa %}
                         <li>
-                            <i class="{{ fd_link.icon }}"></i> <a href="{{ fd_link.url | relative_url }}">{{ fd_link.label }}</a>
+                            {% if fd_link.url %}
+                            <i class="{{ fd_link.icon }}"></i><a href="{{ fd_link.url }}" target="_blank">{{ fd_link.label }}</a>
+                            {% else %}
+                            <strong>{{ fd_link.label }}</strong>
+                            {% endif %}
                         </li>
                         {% endfor %}
                     </ul>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    
                 </div>
             </div>
         </div>
