--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
                 <div class="col-md-2 col-sm-12">
-                    
+                    <img src="assets/images/DSA/arkansasmap2.png" height="auto" alt="Arkansas DSA Map">
                 </div>
             </div>
         </div>
