--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 {% assign owner = site.data.nav.footer[0] %}
 {% assign social = site.data.nav.footer[1] %}
 {% assign ardsa = site.data.nav.footer[2] %}
+{% assign quick = site.data.nav.footer[3] %}
 {% assign about = site.data.copy.global[0] %}
 
 <footer class="page-footer">
@@ -28,19 +29,30 @@
                 <div class="col-md-2 col-sm-12">
                     <h4 class="text-red m-0">Arkansas DSA</h3>
                     <ul class="my-3">
-                        {% for fd_link in ardsa.ardsa %}
+                        {% for ar_link in ardsa.ardsa %}
                         <li>
-                            {% if fd_link.url %}
-                            <i class="{{ fd_link.icon }}"></i><a href="{{ fd_link.url }}" target="_blank">{{ fd_link.label }}</a>
+                            {% if ar_link.url %}
+                            <i class="{{ ar_link.icon }}"></i><a href="{{ ar_link.url }}" target="_blank">{{ ar_link.label }}</a>
                             {% else %}
-                            <strong>{{ fd_link.label }}</strong>
+                            <strong>{{ ar_link.label }}</strong>
                             {% endif %}
                         </li>
                         {% endfor %}
                     </ul>
                 </div>
                 <div class="col-md-2 col-sm-12">
-                    <img src="assets/images/DSA/arkansasmap2.png" height="auto" alt="Arkansas DSA Map">
+                    <h4 class="text-red m-0">Quick Links</h3>
+                    <ul class="my-3">
+                        {% for qu_link in quick.quick %}
+                        <li>
+                            {% if ar_link.url %}
+                            <a href="{{ qu_link.url }}" target="_blank">{{ qu_link.label }}</a>
+                            {% else %}
+                            <strong>{{ qu_link.label }}</strong>
+                            {% endif %}
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
