--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 {% assign owner = site.data.owner %}
+{% assign join = site.data.nav.join %}
 
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container-10">
     Join DSA today!
-    <a class="btn btn-join" href="https://act.dsausa.org/donate/membership/" target="_blank">Join</a>
+    <a class="btn btn-join" href="{{ join.url }}" target="_blank">Join</a>
   </div>
   <nav class="container">
     <!-- site home -->
