--- a/_sass/bootstrap/scss/_dropdown.scss
+++ b/_sass/bootstrap/scss/_dropdown.scss
@@ -133,7 +133,7 @@
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   background-color: transparent; // For `<button>`s
   border: 0; // For `<button>`s
-  @include font-size($navbar-brand-font-size);
+  @include font-size($font-size-base);
 
   // Prevent dropdown overflow if there's no padding
   // See https://github.com/twbs/bootstrap/pull/27703
