--- a/_sass/bootstrap/scss/utilities/_text.scss
+++ b/_sass/bootstrap/scss/utilities/_text.scss
@@ -67,6 +67,11 @@
   overflow-wrap: break-word !important;
 }
 
+.m-foot {
+  margin: 0;
+  text-align: center;
+}
+
 // Reset
 
 .text-reset { color: inherit !important; }
